src/App.css
@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap');

:root {
  --primary: #FF5C04;
  font-family: 'Geist', sans-serif;
}

body {
  height: 100vh;
  margin: 0;
  user-select: none;
}

.top-bar {
  position: absolute;
  margin-top: 30px;
  width: calc(100vw - 60px);
  height: fit-content;
  margin-left: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.top-button {
  width: fit-content;
  height: fit-content;
  border-radius: 800px;
  background-color: var(--primary);
  color: white;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-size: 24px;
  font-weight: 400;
  letter-spacing: -6%;
}

.title {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: absolute;
  margin-top: 108px;
  left: 0;
  right: 0;
}

h2 {
  all: unset;
  font-weight: 500;
  font-size: 24px;
  letter-spacing: -6%;
  color: white;
}

h1 {
  all: unset;
  font-size: 64px;
  font-weight: 900;
  letter-spacing: -4%;
  background: linear-gradient(180deg, #FFFFFF 0%, #FFB993 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.reel {
  width: 1179px;
  height: 454px;
  border-radius: 34px;
  background-color: #FF7700;
  border: solid 2px #C04300;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: 20px;
  gap: 20px;
}

.reel-container {
  box-sizing: border-box;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.reel-display {
  width: 100%;
  height: 100%;
  border-radius: 20px;
  background: linear-gradient(180deg, #EA5200 0%, #FF5C04 100%);
  box-shadow: inset 0px -24px 28.100000381469727px 0px #ff4400;
  overflow-y: hidden;
}

.reel-roller {
  width: 100%;
  height: 100%;
  transition: all cubic-bezier(.28,0,.11,.99) 1000ms;
}

.motion-blur {
  /* animation: motionBlur 1000ms cubic-bezier(.28,0,.11,.99); */
}

@keyframes motionBlur {
  0% {
    filter: blur(15px);
  } 100% {
    filter: blur(0px);
  }
}

.reel-numbers {
  font-size: 180px;
  font-weight: 900;
  background: linear-gradient(180deg, #FFFFFF 21%, #FFBE84 80%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.reroll-button {
  position: absolute;
  font-weight: 900;
  font-size: 24px;
  width: fit-content;
  height: fit-content;
  color: white;
  padding-left: 38px;
  padding-right: 38px;
  padding-top: 17px;
  padding-bottom: 17px;
  border-radius: 25px;
  box-sizing: border-box;
  background: linear-gradient(180deg, #FF5900 0%, #FF7700 100%);
  box-shadow: inset 0px -6px 9.399999618530273px 0px #ff4400;
  border: solid #AC2E00 1px;
  cursor: pointer;
  gap: 5px;
  bottom: 0;
  margin-left: 50%;
  translate: -50%;
  margin-bottom: 108px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all cubic-bezier(.28,0,.11,.99) 200ms;
}

.reroll-button:hover {
  scale: 1.1;
}

.spin {
  animation: spin 500ms cubic-bezier(.28,0,.11,.99);
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  } 100% {
    transform: rotate(360deg);
  }
}

.bg-wrapper {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -300;
}

.fade {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: black;
  z-index: 200;
  opacity: 70%;
}

@media (max-width: 1200px) {
  .reel {
    scale: 0.7;
  }
}

@media (max-width: 728px) {
  .reel {
    scale: 0.;
  }
}

